resolve_conversation